@@ -1,5 +1,5 @@
 /*
- * $Id: t_cancel.h,v 1.8 2005/12/21 17:25:32 janakj Exp $
+ * $Id: t_cancel.h,v 1.9 2006/10/10 19:21:59 andrei Exp $
  *
  *
  * Copyright (C) 2001-2003 FhG Fokus
@@ -28,6 +28,8 @@
  * History:
  * ---------
  *  2004-02-11  FIFO/CANCEL + alignments (hash=f(callid,cseq)) (uli+jiri)
+ *  2006-10-10  should_cancel_branch() returns true even for branches with
+ *               no response or with response <100 (andrei)
  */
 
 
@@ -51,20 +53,36 @@
 
 #define BUSY_BUFFER ((char *)-1)
 
-void which_cancel( struct cell *t, branch_bm_t *cancel_bm );
-void cancel_uacs( struct cell *t, branch_bm_t cancel_bm );
-void cancel_branch( struct cell *t, int branch );
+/* flags for cancel_uacs(), cancel_branch() */
+#define F_CANCEL_B_KILL 1  /*  will completely stop the  branch (stops the
+							   timers), use only before a put_on_wait()
+							   or set_final_timer()*/
+#define F_CANCEL_B_FAKE_REPLY 2 /* will send a fake 487 to all branches that
+								 haven't received any response (>=100). It
+								 assumes the REPLY_LOCK is not held (if it is
+								 => deadlock) */
 
+
+void which_cancel( struct cell *t, branch_bm_t *cancel_bm );
+int cancel_uacs( struct cell *t, branch_bm_t cancel_bm, int flags );
+int cancel_branch( struct cell *t, int branch, int flags );
+
+
+
+/* should be called either with the REPLY_LOCK held or if its known
+ *  by other means that no other cancel trigerring reply can appear
+ *  between this call and the call to cancel_uacs()/cancel_branch()
+ *  WARNING: has side effects: marks branches that should be canceled
+ *   and a second call won't return them again */
 inline short static should_cancel_branch( struct cell *t, int b )
 {
 	int last_received;
 	short should;
 
 	last_received=t->uac[b].last_received;
-	/* cancel only if provisional received and noone else
-	   attempted to cancel yet */
-	should=last_received>=100 && last_received<200
-		&& t->uac[b].local_cancel.buffer==0;
+	/* cancel even if no reply received (in this case cancel_branch()
+	 *  won't actually send the cancel but it will do the cleanup) */
+	should=last_received<200 && t->uac[b].local_cancel.buffer==0;
 	/* we'll cancel -- label it so that noone else
 		(e.g. another 200 branch) will try to do the same */
 	if (should) t->uac[b].local_cancel.buffer=BUSY_BUFFER;
